# BisonQ

./: pyproject.toml  requirements.txt
src/: bisonq.py
src/data/: dybamic_daily_pull.py
